js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/field-init-fn-call-expression-this.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
f
=
function
(
)
{
(
(
)
=
>
this
)
(
)
.
#
x
}
}
;
